# Voice-Detection-Project

./: .gitignore  pyproject.toml
notebooks/: dataset.ipynb  preprocessing.ipynb
src/voice_detection/: data_loading.py  dataset.py  model.py  preprocess.py  train.py
