[project]
name = "voice-detection"
version = "0.1.0"
description = "Speaker verification system using log mel spectrograms and LeJEPA"
requires-python = ">=3.11"

dependencies = [
    # Core ML
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
    "timm>=0.9.0",
    "lejepa @ git+https://github.com/galilai-group/lejepa.git",

    # Audio preprocessing
    "torch-audiomentations>=0.11.0",
    "audiomentations>=0.36.0",

    # VAD / silence removal
    "silero-vad>=5.1.2",

    # Data loading & processing
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "soundfile>=0.12.1",

    # HuggingFace (for VoxCeleb download)
    "huggingface-hub>=0.23.0",
    "datasets>=2.20.0",

    # Experiment tracking
    "tensorboard>=2.17.0",

    # Utilities
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "einops>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "librosa>=0.10.2",      # for visualization/debugging only
    "seaborn>=0.13.0",
    "ipykernel>=6.29.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "librosa>=0.10.2",
    "seaborn>=0.13.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/voice_detection"]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }